--- a/public/viz.html
+++ b/public/viz.html
@@ -253,28 +253,8 @@ function refreshCCISummaryChordPlots() {
                     <li>
                       <div class="collapsible-header center search-header"><i class="material-icons">expand_more</i>Manage filters</div>
                       <div class="collapsible-body">
-                          <div class="switch" style="padding-left: 30px;">
-                            <label>
-                              <span class="black-text text-lighten-10 switch-label">Show heatmaps</span>
-                              <input id="cci_summary_switch" type="checkbox">
-                              <span id="cci_summary_switch_lever" class="lever"></span>
-                              <span class="black-text text-lighten-10 switch-label">Show chord plots</span>
-                            </label>
-                          </div>
-                          <div id="cci_summary_show_all_celltypes_div" style="padding-top: 20px; padding-left: 30px;" hidden>
-                              <label>
-                                  <input id="cci_summary_show_all_celltypes" type="checkbox" class="filled-in"/>
-                                  <span id="cci_summary_show_all_celltypes_label">Show all cell types</span>
-                              </label>
-                          </div>
+                          
                           <div>
-                              <div id="cci_summary_class_filter_div" style="padding-left: 20px; padding-right: 20px" hidden>
-                                  <div class="input-field">
-                                    <input style="padding-top: 30px;" type="text" id="cci_summary_class_input" placeholder="">
-                                    <label style="padding-top: 30px;" for="cci_summary_class_input" class="black-text text-lighten-10 search-input-label">Filter interactions by class</label>
-                                  </div>
-                                  <div style="padding-bottom: 20px;" class="cci_summary_selected_classes"></div>
-                              </div>
                               <div id="cci_summary_modality_filter_div" style="padding-left: 20px; padding-right: 20px" hidden>
                                   <div class="input-field">
                                     <input style="padding-top: 30px;" type="text" id="cci_summary_modality_input" placeholder="">
@@ -401,7 +381,7 @@ function refreshCCISummaryChordPlots() {
                 <div class="section">
                   <!--CCI Summary Plot buttons-->
                   <div id="cci-summary-apply-filters" class="center-align">
-                    <button id="refresh_cci_summary_plot_btn" style="text-transform: none;" class="btn waves-effect waves-light btn-small z-depth-2 green lighten-1" onclick="refreshCCISummaryPlots()">Refresh plot
+                    <button id="refresh_cci_summary_plots" style="text-transform: none;" class="btn waves-effect waves-light btn-small z-depth-2 green lighten-1" onclick="refreshCCISummaryPlots()">Refresh plot
                         <i class="material-icons right">refresh</i>
                     </button>
                     <button id="clear_cci_summary_filters" style="text-transform: none;" class="btn waves-effect waves-light btn-small z-depth-2 red lighten-1" onclick="clearCCISummaryFilters()">Clear filters
@@ -441,14 +421,19 @@ function refreshCCISummaryChordPlots() {
                       -->
                       <div id="cci-summary-cell-type-filters">
                         <label>
-                          <input type="checkbox" class="filled-in" name="summmarymicroenvironmentfilter" id="summarymicroenvironmentfilter" checked onchange="toggleFilterVisibility(this)"/>
+                          <input disabled type="checkbox" class="filled-in" name="summmarymicroenvironmentfilter" id="summarymicroenvironmentfilter" checked onchange="toggleFilterVisibility(this)"/>
                           <span class="outer-filter-nest">By Microenvironment</span>
                         </label>
                         <div class="filter-layer-two" id="summarymicroenvironmentfilter-select">
-                          <div id="cci_summary_microenvironment_div" style="padding-left: 20px; padding-right: 20px" hidden>
+                          <div id="cci_summary_show_all_celltypes_div" style="padding-top: 20px;" hidden>
+                            <label>
+                                <input id="cci_summary_show_all_celltypes" type="checkbox" class="filled-in"/>
+                                <span id="cci_summary_show_all_celltypes_label">Show all cell types</span>
+                            </label>
+                          </div>
+                          <div id="cci_summary_microenvironment_div" hidden>
                             <div class="input-field">
                               <input style="padding-top: 30px;" type="text" id="cci_summary_microenvironment_input" placeholder="">
-                              <label style="padding-top: 10px;" for="cci_summary_microenvironment_input" class="black-text text-lighten-10 search-input-label">Select microenvironments to plot</label>
                             </div>
                             <div class="cci_summary_selected_microenvironments" style="padding-bottom: 10px;" ></div>
                           </div>
@@ -540,7 +525,19 @@ function refreshCCISummaryChordPlots() {
                       Interaction filters for: Cell-Cell Communication Summary Plot
                       -->
                       <div id="cci-summary-interaction-filters">
-                        <h5>CCI Summary interaction filters</h5>
+                        <label>
+                          <input type="checkbox" checked disabled class="filled-in" name="summaryinteractionclassfilter" id="summaryinteractionclassfilter" onchange="toggleFilterVisibility(this)"/>
+                          <span class="outer-filter-nest">By Interaction Classification</span>
+                        </label>
+                        <div class="filter-layer-two" id="summaryinteractionclassfilter-select">
+                          <div id="cci_summary_class_filter_div" style="padding-left: 20px; padding-right: 20px" hidden>
+                            <div class="input-field">
+                              <input style="padding-top: 30px;" type="text" id="cci_summary_class_input" placeholder="">
+                              <label style="padding-top: 30px;" for="cci_summary_class_input" class="black-text text-lighten-10 search-input-label">Filter interactions by class</label>
+                            </div>
+                            <div style="padding-bottom: 20px;" class="cci_summary_selected_classes"></div>
+                          </div>
+                        </div>
                       </div>
 
                       <!--
@@ -658,6 +655,14 @@ function refreshCCISummaryChordPlots() {
               </div>
               <div id="cci_summary_error" class="container center red-text" style="padding-top: 20px;" hidden></div>
               <div class="row">
+                <div class="switch" style="padding-left: 30px;">
+                  <label>
+                    <span class="black-text text-lighten-10 switch-label">Show heatmaps</span>
+                    <input id="cci_summary_switch" type="checkbox">
+                    <span id="cci_summary_switch_lever" class="lever"></span>
+                    <span class="black-text text-lighten-10 switch-label">Show chord plots</span>
+                  </label>
+                </div>
                 <!-- Cell cell interaction plot - All cell types-->
                 <div id="cci0_div" hidden>
                   <div class="col s12 m6 l6">
